dropshot/tests/fail/bad_endpoint1.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_endpoint1.rs:13:1
   |
13 | async fn bad_endpoint() -> Result<HttpResponseOk<()>, HttpError> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: endpoint `bad_endpoint` must have at least one RequestContext argument
  --> tests/fail/bad_endpoint1.rs:13:22
   |
13 | async fn bad_endpoint() -> Result<HttpResponseOk<()>, HttpError> {
   |                      ^^
